--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,4 @@
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 MiniFB = "cc649173-1898-4bb8-8a16-ca5f88bd87d9"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
